Move things around

--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "scripts": {
     "heroku-postbuild": "./bin/post_node_build"
   },
-  "dependencies": {
-  },
-  "devDependencies": {
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
